--- a/DAY 1/index.html
+++ b/DAY 1/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>this is my first code</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis quas totam doloribus soluta ipsa nam sit necessitatibus voluptas consequuntur quia, maiores error, eius corrupti, id enim officia dolores accusantium amet. Eum, id?</p>
 </body>
 </html>
